[tool.poetry]
name = "pyamis"
version = "0.1.0"
description = ""
authors = ["kylin <260987762@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
jinja2 = "^3.1.4"
ujson = "^5.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test = "pytest --cov=./tests --cov-report=html:./outputs/result/cov-report --cov-report term-missing"
